Added Github Link

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="banner"><p class="antihighlight">About Me</p></div>
         <image src="shadow.png" alt="" class="shadow" />
       </div>
-      <div class="button">
-        <image src="potion.png" alt="" class="icon" />
+      <div class="button" onclick="openPage('https://github.com/WerenskjoldH')"">
+        <image src="github-logo.png" alt="" class="icon" />
         <div class="banner"><p class="antihighlight">Github</p></div>
         <image src="shadow.png" alt="" class="shadow" />
       </div>
