Added envelope icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <image src="shadow.png" alt="" class="shadow" />
       </div>
       <div class="button">
-        <image src="potion.png" alt="" class="icon" />
+        <image src="envelope.png" alt="" class="icon" />
         <div class="banner"><p class="antihighlight">Contact Me</p></div>
         <image src="shadow.png" alt="" class="shadow" />
       </div>
