--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="table-of-contents">
       <div class="button" onclick="openPage('about-me.html')">
-        <image src="potion.png" alt="" class="icon" />
+        <image src="me.png" alt="" class="icon" />
         <div class="banner"><p class="antihighlight">About Me</p></div>
         <image src="shadow.png" alt="" class="shadow" />
       </div>
