Added Minor Touchups

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="site-wrap">
       <div id="navigation">
-        <div id="Logo-area" class="antihighlight selectable"><p>Welcome_</p></div>
+        <div id="Logo-area" class="antihighlight"><p>Welcome_</p></div>
         <div id="About-area" class="antihighlight"><p class="option selectable" >About Me</p></div>
         <div id="Contact-area" class="antihighlight"><p class="option selectable" >Contact</p></div>
         <div id="Accounts-area" class="antihighlight ">
