Formatted IDs and Modified Buttons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
   </head>
   <body>
     <div class="site-wrap">
-      <div id="navigation">
-        <div id="Logo-area" class="antihighlight"><p>Welcome_</p></div>
+      <div id="Navigation">
+        <div id="Logo-area" class="antihighlight">
+            <p>Hunter</p>
+            <p id="Title-subtext">Werenskjold</p>
+        </div>
         <div id="About-area" class="antihighlight"><p class="option selectable" >About Me</p></div>
         <div id="Contact-area" class="antihighlight"><p class="option selectable" >Contact</p></div>
         <div id="Accounts-area" class="antihighlight ">
@@ -34,7 +37,7 @@
         </div>
       </div>
 
-      <div id="simarea"></div>
+      <div id="Simarea"></div>
     </div>
 
     <script src="button.js"></script>
