Library Reference Now External

--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../webgl.css" type="text/css" />
-    <link rel="stylesheet" href="processingjs-style.css" type="text/css" />
-
-    <!-- Adds quick functionality for setting up and creating 3D environments -->
-    <script type="text/javascript" src="Libraries/ProcessingJS/p5.js"></script>
-    <script
-      type="text/javascript"
-      src="Libraries/ProcessingJS/addons/p5.dom.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <title>Hunter Werenskjold - WIP</title>
   </head>
   <body>
