Added Hobbies Button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div id="About-area" class="antihighlight"><p class="option selectable" >About Me</p></div>
         <div id="Contact-area" class="antihighlight"><p class="option selectable" >Contact</p></div>
+		<div id="Hobbies-area" class="antihighlight"><p class="option selectable" >Hobbies</p></div>
         <div id="Accounts-area" class="antihighlight ">
             <div class="button selectable" onclick="openPage('https://github.com/WerenskjoldH')"">
                 <image src="github-logo.png" alt="" class="icon" />
