--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <script>
             console.log('hi');
 
+            alert("starting app");
+
             function openSite(e) {
                 window.open("https://www.google.com/", "_self");
             }
