--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
+<script>
+  AFRAME.registerComponent('registerevents', {
+    init: function() {
+      var marker = document.getElementById("trex");
+
+      marker.addEventListener("markerFound", function () {
+        alert("Marker Found!");
+      })
+    }
+  })
+</script>
+
 <style>
   .arjs-loader {
     height: 100%;
@@ -43,6 +55,7 @@
       smoothThreshold="5"
     >
       <a-entity
+        id = "trex";
         gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         scale="5 5 5"
         position="50 150 0"
@@ -51,4 +64,12 @@
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
+
+  <script>
+    alert("Starting App");
+    function openSite()
+    {
+      alert("Opening Site");
+    }
+  </script>
 </body>
