--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
     <!-- we use cors proxy to avoid cross-origin problems -->
-    <a-nft
+    <a-nft markerhandler 
       type="nft"
       url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
       smooth="true"
@@ -54,10 +54,12 @@
   </a-scene>
 
   <script>
-    AFRAME.registerComponent('registerevents', {
+    AFRAME.registerComponent('markerhandler', {
       init: function() {
         var marker = document.getElementById("trex");
-  
+        
+
+        alert("Registering events!");
         marker.addEventListener("markerFound", function () {
           alert("Marker Found!");
         })
