--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <script>
     AFRAME.registerComponent('markerhandler', {
       init: function() {
-        var marker = document.getElementById("trex");
+        var marker = document.querySelector("#trex");
         
 
         alert("Registering events!");
