--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"> </script>
 <script>
-    alert("Starting script");
+    alert("Starting script two");
 
     AFRAME.registerComponent('registerevents', {
         init: function () {
