Added Video Page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               console.log('Hiro marker found', markerId);
               
               alert("Opening Google Link")
-              window.open("https://www.google.com/", "_blank")
+              window.open("https://werenskjoldh.github.io/video.html", "_blank")
           });
       }
     });
