--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="video.css">
     </head>
     <div class="site-wrap">
-        <video loop="false" width="1080" height="1920">
+        <video loop="false" width="1080" height="1920" controls>
             <source type="video/mp4" src="/Content/北風と太陽.mp4">
         </video>
     </div>
