--- a/video.html
+++ b/video.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" href="video.css">
     </head>
     <div class="site-wrap">
