--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
           marker.addEventListener('markerFound', function () {
               var markerId = marker.id;
-              console.log('Hiro marker found', markerId);
               
               alert("Opening Google Link")
               window.open("https://werenskjoldh.github.io/video.html", "_blank")
@@ -36,7 +35,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-nft id="marker-hiro" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex" hiroevents>
+        <a-nft type="nft" id="marker-hiro" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex" hiroevents>
         </a-nft>
 
         <a-marker preset="kanji" id="marker-kanji" kanjievents>
