Added Image Descriptors and Picture Book Image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-nft type="nft" id="marker-hiro" url="Content/pinball.jpg" hiroevents>
+        <a-nft type="nft" id="marker-hiro" url="Content/005a3f1014a140a63e9b" hiroevents>
         </a-nft>
 
         <a-marker preset="kanji" id="marker-kanji" kanjievents>
