--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 <script>
-    alert("Starting script six");
+    alert("Starting script seven");
 
     AFRAME.registerComponent('hiroevents', {
       init: function () {
@@ -35,7 +35,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-nft type="nft" id="marker-hiro" url="Content/005a3f1014a140a63e9b" hiroevents>
+        <a-nft type="nft" id="marker-hiro" url="Content/frogStory" hiroevents>
         </a-nft>
 
         <a-marker preset="kanji" id="marker-kanji" kanjievents>
