--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </script>
 
 <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
+    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
         <a-nft type="nft" id="marker-hiro" url="Content/frogStory" hiroevents>
         </a-nft>
 
