--- a/video.html
+++ b/video.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="video.css">
     </head>
     <div class="site-wrap">
-        <video controls autoplay>
+        <video controls playsinline autoplay>
             <source type="video/mp4" src="/Content/北風と太陽.mp4">
         </video>
     </div>
