--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="scanner.js"></script>
+  <script src="prereqCheck.js"></script>
 </head>
 
 <body>
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+    <div id="prereq">
+    
+    </div>
+
+    <a-scene id="aScene" embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
