--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <div id="prereq">
-    
+      <h1>
+        Please Give Permissions
+      </h1>
     </div>
 
-    <a-scene id="aScene" embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+    <a-scene id="aScene" embedded arjs="trackingMethod: best; sourceType: webcam; sourceWidth:1280; sourceHeight:960; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
