--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="prereq">
       <h1>
-        Please Give Permissions
+        Please Give Permissions 1.0
       </h1>
     </div>
 
