--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="index.css" />
+  <script src="prereqCheck.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -11,8 +12,8 @@
 
 <body>
     <div id="prereq">
-      <h1>
-        Please Give Permissions 1.0
+      <h1 id="warningText">
+        Please Give Permissions 1.1
       </h1>
     </div>
 
@@ -25,8 +26,6 @@
 
         <a-entity camera></a-entity>
     </a-scene>
-
-    <script src="prereqCheck.js"></script>
 </body>
 
 </html>
