--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <link rel="stylesheet" href="index.css" />
-  <script src="prereqCheck.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="inapp.js"></script>
+  <script src="prereqCheck.js"></script>
   <script src="scanner.js"></script>
 </head>
 
