--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </h1>
     </div>
 
-    <a-scene id="aScene" embedded arjs="trackingMethod: best; sourceType: webcam; sourceWidth:1280; sourceHeight:960; debugUIEnabled: false;">
+    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; sourceWidth:1280; sourceHeight:960; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
