--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!doctype HTML>
 <html>
 
-  <head>
-    <link rel="stylesheet" href="index.css" />
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    <script src="scanner.js"></script>
-  </head>
+<head>
+  <link rel="stylesheet" href="index.css" />
+  <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="lodash.js"></script>
+  <script src="prereqCheck.js"></script>
+  <script src="scanner.js"></script>
+</head>
 
 <body>
+    <div id="prereq">
+      <h1 id="warningText">
+        Please Give Permissions 1.1
+      </h1>
+    </div>
 
-
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; sourceWidth:1280; sourceHeight:960; debugUIEnabled: false;">
+    <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
