Removed Prereq Check For Testing

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="lodash.js"></script>
-  <script src="prereqCheck.js"></script>
+  <!-- <script src="prereqCheck.js"></script> -->
   <script src="scanner.js"></script>
 </head>
 
 <body>
-    <div id="prereq">
+    <!-- <div id="prereq">
       <h1 id="warningText">
         
       </h1>
-    </div>
+    </div> -->
 
     <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
