Re-added Video Element

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a-entity camera></a-entity>
     </a-scene>
 
-    <!-- <video autoplay="" muted="" playsinline="" id="arjs-video"></video> -->
+    <video id="arjs-video" autoplay="" muted="" playsinline=""></video>
 </body>
 
 </html>
