--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="lodash.js"></script>
   <script src="scanner.js"></script>
-  <!-- <script src="prereqCheck.js"></script> -->
 </head>
 
 <body>
@@ -22,7 +21,9 @@
         <a-entity camera></a-entity>
     </a-scene>
 
-    <video id="arjs-video" autoplay="" muted="" playsinline=""></video>
+    <!-- <video id="arjs-video" autoplay="" muted="" playsinline=""></video> -->
+
+    <script src="prereqCheck.js"></script>
 </body>
 
 </html>
