--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <link rel="stylesheet" href="index.css" />
+  <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="lodash.js"></script>
+  <script src="scanner.js"></script>
   <script src="prereqCheck.js"></script>
 </head>
 
@@ -15,7 +18,18 @@
       </h1>
     </div>
 
-    <i-frame id="sceneArea" src="scene.html">
+    <div id="embeddedScene">
+      <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;">
+          <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
+          </a-nft>
+
+          <a-marker preset="kanji" id="marker-kanji" kanjievents>
+          </a-marker>
+
+          <a-entity camera></a-entity>
+      </a-scene>
+   </div>
+    <!-- <video id="arjs-video" autoplay="" muted="" playsinline=""></video> -->
 </body>
 
 </html>
