--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a-entity camera></a-entity>
       </a-scene>
    </div>
-    <!-- <video id="arjs-video" autoplay="" muted="" playsinline=""></video> -->
+    <video id="arjs-video" autoplay="" muted="" playsinline=""></video>
 </body>
 
 </html>
