--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="lodash.js"></script>
   <script src="scanner.js"></script>
-  <script src="prereqCheck.js"></script>
+  <!-- <script src="prereqCheck.js"></script> -->
 </head>
 
 <body>
