--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="lodash.js"></script>
-  <script src="scanner.js"></script>
+  <script defer src="scanner.js"></script>
   <!-- <script src="prereqCheck.js"></script> -->
 </head>
 
