--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <link rel="stylesheet" href="index.css" />
-  <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+  <script defer src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="lodash.js"></script>
   <script defer src="scanner.js"></script>
-  <!-- <script src="prereqCheck.js"></script> -->
+  <script defer src="prereqCheck.js"></script>
 </head>
 
 <body>
