--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </h1>
     </div>
 
-    <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;">
+    <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;" camera-error="CameraError()" camera-init="CameraSuccess()">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
