--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 
 <body>
     <div id="prereq">
-      <h1 id="warningText">
-        
-      </h1>
+      <h1 id="warningText"></h1>
     </div>
 
-    <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
+    <a-scene arjs="trackingMethod: best; debugUIEnabled: false;" loading-screen="dotsColor: red; backgroundColor: black">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
