--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <h1 id="warningText"></h1>
     </div>
 
-    <a-scene arjs="trackingMethod: best; debugUIEnabled: false;" loading-screen="dotsColor: red; backgroundColor: black">
+    <div id="loading-screen">
+      <h1>"Loading"</h1>
+    </div>
+
+    <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
