--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h1 id="warningText"></h1>
     </div>
 
-    <div id="loading-screen">
+    <!-- <div id="loading-screen">
       <h1>"Loading"</h1>
-    </div>
+    </div> -->
 
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
