--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>"Loading"</h1>
     </div> -->
 
-    <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
+    <a-scene arjs="trackingMethod: best; debugUIEnabled: false;" loading-screen="dotsColor: red; backgroundColor: black">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
