--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="loading-screen">
-      <h1>"Loading"</h1>
+      <h1>Loading</h1>
     </div>
 
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
