--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet"> 
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -14,11 +15,21 @@
 
 <body>
     <div id="prereq">
-      <h1 id="warningText"></h1>
+      <!-- BG Stars -->
+      <img id="left-star" src="Content/star.png"/>
+      <img id="right-star" src="Content/star.png"/>
+
+      <div id="inapp-screen" class="invisible">
+        <img id="play-button" src="Content/playButton.png"/>
+        <div class="text-area">
+          <p id="launch-text">LAUNCH</p>
+          <p id="different-browser-text">Please select another browser</p>
+        </div>
+      </div>
     </div>
 
     <div id="loading-screen">
-      <h1>Loading</h1>
+      <h1>Loading...</h1>
     </div>
 
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
