Added In-App Error Screen

--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
 
       <div id="inapp-screen" class="invisible">
         <img id="play-button" src="Content/playButton.png"/>
-        <div class="text-area">
+        <div id="inapp-text-area">
           <p id="launch-text">LAUNCH</p>
           <p id="different-browser-text">Please select another browser</p>
+        </div>
+      </div>
+
+      <div id="unaccessible-media-screen" class="invisible">
+        <div id="media-text-area">
+          <p id="access-text">No Camera Access</p>
+          <p id="access-description-text">Please refresh the page</p>
         </div>
       </div>
     </div>
