--- a/video.html
+++ b/video.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0"> -->
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
         <link rel="stylesheet" href="video.css">
     </head>
     <div class="site-wrap">
         <video controls playsinline autoplay>
-            <source type="video/mp4" src="/Content/北風と太陽.mp4">
+            <source type="video/mp4" src="./Content/北風と太陽.mp4">
         </video>
     </div>
 </html>
