--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
     </head>
     <div class="site-wrap">
         <video controls playsinline autoplay>
-            <source type="video/mp4" src="./Content/北風と太陽.mp4">
+            <source type="video/mp4" src="Content/storyEX.mp4">
         </video>
     </div>
 </html>
