--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
-        <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
+        <a-nft type="nft" id="frogstory-img" url="https://werenskjoldh.github.io/Content/frogStory" frogstoryevents>
         </a-nft>
 
         <a-marker preset="kanji" id="marker-kanji" kanjievents>
