Started IOS Support

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </div>
 
       <div id="inapp-screen" class="invisible">
-        <img id="play-button" src="Content/playButton.png" onclick="OpenWithPopup()"/>
+        <a id="another-browser-a" href="">
+          <img id="play-button" src="Content/playButton.png" />
+        </a>
         <div id="inapp-text-area">
           <p id="launch-text">LAUNCH</p>
           <p id="different-browser-text">Please select another browser</p>
