--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <link rel="stylesheet" href="index.css" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet"> 
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -53,8 +55,12 @@
       <h1>Loading...</h1>
     </div>
 
+    <div id="video-screen" class="closed">
+      <img id="vs-close-button" src="Content/closeButtonBevel.png"/>
+    </div>
+
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
-        <a-nft type="nft" id="frogstory-img" url="https://werenskjoldh.github.io/Content/frogStory" frogstoryevents>
+        <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
 
         <a-marker preset="kanji" id="marker-kanji" kanjievents>
