Primary Refactoring Finished

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       </div>
     </div>
 
+    This is the ar scene we will be using to search for the various NFT images and calling the associated events
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;">
         <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
         </a-nft>
