Formating & Text Changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>
 
         <div id="inapp-text-area">
-          <p id="launch-text">LAUNCH</p>
+          <p id="launch-text">TAP TO LAUNCH</p>
           <p id="different-browser-text">Please select another browser</p>
         </div>
       </div>
