--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
     <div id="prereq">
       <!-- BG Stars -->
-      <img id="left-star" src="Content/star.png"/>
-      <img id="right-star" src="Content/star.png"/>
+      <img id="left-star" src="Content/star.png" class="antihighlight"/>
+      <img id="right-star" src="Content/star.png" class="antihighlight"/>
 
       <!-- Where we ask for camera permissions -->
-      <div id="allowance-screen">
+      <div id="allowance-screen" class="antihighlight">
         <div id="allowance-text-area">
           <p id="allowance-text">Please Allow Camera Access</p>
         </div>
@@ -30,7 +30,7 @@
 
       <!-- If the site is opened on desktop, then this div will be shown -->
       <!-- NOTE: This could use an icon image to make it look a bit more sleek -->
-      <div id="desktop-screen" class="invisible">
+      <div id="desktop-screen" class="invisible" class="antihighlight">
         <div id="desktop-text-area">
           <p id="desktop-text">Please Open With A Mobile Device</p>
         </div>
@@ -49,7 +49,7 @@
       </div>
 
       <!-- If the user denies media ( stream video ) permissions, then this div will be show -->
-      <div id="unaccessible-media-screen" class="invisible">
+      <div id="unaccessible-media-screen" class="invisible antihighlight">
         <div id="media-text-area">
           <p id="access-text">No Camera Access</p>
           <p id="access-description-text">Please refresh the page</p>
@@ -58,13 +58,13 @@
     </div>
 
     <!-- While the image tracking data is being loaded this div will be shown -->
-    <div id="loading-screen">
+    <div id="loading-screen" class="antihighlight">
       <!-- https://github.com/lukehaas/css-loaders -->
       <div class="loader">Loading...</div>
     </div>
 
     <!-- This is the div that contains the video that is displayed after the user scans a picture -->
-    <div id = "video-wrap" class="closed">
+    <div id = "video-wrap" class="closed antihighlight">
       <div id="video-screen">
         <!-- This is the close 'X' that appears at the top of the video div  -->
         <img id="vs-close-button" src="Content/closeButtonBevel.png" onclick="CloseVideoScreen()"/>
@@ -74,7 +74,7 @@
       </div>
     </div>
 
-    <img id="scan-overlay-image" src="Content/arOverlay.png"/>
+    <img id="scan-overlay-image" src="Content/arOverlay.png" class="antihighlight"/>
 
     <!-- This is the ar scene we will be using to search for the various NFT images and calling the associated events -->
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;" vr-mode-ui="enabled: false">
