Visual Adjustments For Desktop

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
       <!-- If the site is opened on desktop, then this div will be shown -->
       <!-- NOTE: This could use an icon image to make it look a bit more sleek -->
-      <div id="desktop-screen" class="invisible" class="antihighlight">
+      <div id="desktop-screen" class="invisible">
         <div id="desktop-text-area">
-          <p id="desktop-text">Please Open With A Mobile Device</p>
+          <p id="desktop-text" class="antihighlight">Please Access This Site With A Mobile Device</p>
         </div>
       </div>
 
       <!-- If the page is opened in an in-app browser this div will be shown -->
-      <div id="inapp-screen" class="invisible">
+      <div id="inapp-screen" class="invisible antihighlight">
         <a id="another-browser-a" href="">
           <img id="play-button" src="Content/playButton.png" />
         </a>
