--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       </div>
     </div>
 
-    <img id="scan-overlay-image" src="Content/arOverlay.png" class="antihighlight"/>
+    
+    <img id="scan-overlay-image" src="Content/photoScanIcon.png" class="antihighlight"/>
 
     <!-- This is the ar scene we will be using to search for the various NFT images and calling the associated events -->
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;" vr-mode-ui="enabled: false">
