--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="inapp.js"></script>
   <script src="lodash.js"></script>
   <script src="scanner.js"></script>
   <script src="prereqCheck.js"></script>
@@ -61,6 +62,7 @@
     <div id="loading-screen" class="antihighlight">
       <!-- https://github.com/lukehaas/css-loaders -->
       <div class="loader">Loading...</div>
+      <p id="loading-text">x/x</p>
     </div>
 
     <!-- This is the div that contains the video that is displayed after the user scans a picture -->
@@ -74,19 +76,18 @@
       </div>
     </div>
 
-
+    <!-- This is the watermark-esque image that overlies the camera view -->
     <img id="scan-overlay-image" src="Content/photoScanIcon.png" class="antihighlight"/>
 
     <!-- This is the ar scene we will be using to search for the various NFT images and calling the associated events -->
     <a-scene arjs="trackingMethod: best; debugUIEnabled: false;" vr-mode-ui="enabled: false">
-        <a-nft type="nft" id="frogstory-img" url="Content/frogStory" frogstoryevents>
+        <!-- Story One -->
+        <a-nft type="nft" id="frogstory-img" url="Content/frogStory">
         </a-nft>
 
-        <a-nft type="nft" id="kimino-img" url="Content/kimino" kiminoevents>
+        <!-- Story Two -->
+        <a-nft type="nft" id="kimino-img" url="Content/kimino">
         </a-nft>
-
-        <a-marker preset="kanji" id="marker-kanji" kanjievents>
-        </a-marker>
 
         <a-entity camera></a-entity>
     </a-scene>
